[package]
name = "fleet_speed"
version = "0.1.0"
authors = ["Torgeir Brenn <torgeir.brenn@gmail.com>"]
edition = "2021"

[[bin]]
name = "fleet_speed"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3"
bytes = "1.0"

[dependencies.pyo3]
version = "0.19.1"
features = ["extension-module"]